jenkins-k8s/tp4_infra_et_app/tp4_application_pipeline/resuldev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monsterstack
  name: dnmonster
spec:
  ports:
  - port: 8080
  selector:
    app: monsterstack
    partie: dnmonster
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monsterstack
  name: monstericon
spec:
  ports:
  - port: 5000
  selector:
    app: monsterstack
    partie: monstericon
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monsterstack
  name: redis
spec:
  ports:
  - port: 6379
  selector:
    app: monsterstack
    partie: redis
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monsterstack
  name: dnmonster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monsterstack
      partie: dnmonster
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monsterstack
        partie: dnmonster
    spec:
      containers:
      - image: amouat/dnmonster:1.0
        name: dnmonster
        ports:
        - containerPort: 8080
          name: dnmonster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monsterstack
  name: monstericon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monsterstack
      partie: monstericon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monsterstack
        partie: monstericon
    spec:
      containers:
      - env:
        - name: CONTEXT
          value: DEV
        image: registry.v3s2.dopl.uk/monstericon:beta
        livenessProbe:
          failureThreshold: 1
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5000
          timeoutSeconds: 1
        name: monstericon
        ports:
        - containerPort: 5000
          name: monster-port
        readinessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Accept
              value: application/json
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 300m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 50Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monsterstack
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monsterstack
      partie: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monsterstack
        partie: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monster-ingress
spec:
  rules:
  - host: monstericon.beta.v3s2.dopl.uk
    http:
      paths:
      - backend:
          service:
            name: monstericon
            port:
              number: 5000
        path: /
        pathType: Prefix
